[gd_scene load_steps=10 format=2]

[ext_resource path="res://assets/bottle.dae" type="PackedScene" id=1]
[ext_resource path="res://src/Bottle.gd" type="Script" id=2]
[ext_resource path="res://assets/milk_spill.png" type="Texture" id=3]
[ext_resource path="res://assets/drinking.wav" type="AudioStream" id=4]
[ext_resource path="res://assets/cheer.wav" type="AudioStream" id=5]
[ext_resource path="res://assets/noise.ogg" type="AudioStream" id=6]

[sub_resource type="CylinderShape" id=1]

[sub_resource type="SpatialMaterial" id=4]
vertex_color_use_as_albedo = true

[sub_resource type="QuadMesh" id=3]
material = SubResource( 4 )
size = Vector2( 0.25, 0.25 )

[node name="Bottle" instance=ExtResource( 1 )]
script = ExtResource( 2 )

[node name="Cylinder" parent="." index="0"]
transform = Transform( 0.360055, 0, 0, 0, 0.360055, 0, 0, 0, 0.360055, -2.92941e-09, 0.877087, 3.88534e-09 )

[node name="Area" type="Area" parent="." index="1"]
collision_layer = 4
collision_mask = 2

[node name="CollisionShape" type="CollisionShape" parent="Area" index="0"]
transform = Transform( 0.5, 0, 0, 0, 1, 0, 0, 0, 0.5, 0, 1, 0 )
shape = SubResource( 1 )

[node name="FireworksParticles" type="CPUParticles" parent="." index="2"]
emitting = false
lifetime = 2.0
one_shot = true
explosiveness = 0.7
lifetime_randomness = 0.2
mesh = SubResource( 3 )
flag_disable_z = true
direction = Vector3( 0, 1, 0 )
spread = 30.0
initial_velocity = 9.0
initial_velocity_random = 0.1
orbit_velocity = 0.0
orbit_velocity_random = 0.0
orbit_velocity_curve = null
color = Color( 1, 0, 0, 1 )
hue_variation = 1.0
hue_variation_random = 1.0

[node name="FireworksParticlesFinal" type="CPUParticles" parent="." index="3"]
visible = false
emitting = false
amount = 12
lifetime = 2.0
speed_scale = 1.3
explosiveness = 0.5
lifetime_randomness = 0.2
mesh = SubResource( 3 )
flag_disable_z = true
direction = Vector3( 0, 1, 0 )
spread = 30.0
initial_velocity = 11.0
initial_velocity_random = 0.1
orbit_velocity = 0.0
orbit_velocity_random = 0.0
orbit_velocity_curve = null
color = Color( 1, 0, 0, 1 )
hue_variation = 1.0
hue_variation_random = 1.0

[node name="Spill" type="Sprite3D" parent="." index="4"]
transform = Transform( 20, 0, 0, 0, -3.25841e-06, -20, 0, 20, -3.25841e-06, 0, 0.01, 0 )
visible = false
texture = ExtResource( 3 )

[node name="SpillParticles" type="CPUParticles" parent="." index="5"]
transform = Transform( 1, 0, 0, 0, 1, 0, 0, 0, 1, 0, 1.5, 0.2 )
visible = false
emitting = false
amount = 4
one_shot = true
explosiveness = 0.8
lifetime_randomness = 0.2
mesh = SubResource( 3 )
flag_disable_z = true
direction = Vector3( 0, -1, 0 )
spread = 55.0
initial_velocity = 3.0
initial_velocity_random = 0.1
orbit_velocity = 0.0
orbit_velocity_random = 0.0
orbit_velocity_curve = null
color = Color( 0.996078, 0.992157, 0.992157, 1 )

[node name="AudioStreamPlayer" type="AudioStreamPlayer" parent="." index="6"]
stream = ExtResource( 4 )

[node name="CheerPlayer" type="AudioStreamPlayer" parent="." index="7"]
stream = ExtResource( 5 )

[node name="NoisePlayer" type="AudioStreamPlayer" parent="." index="8"]
stream = ExtResource( 6 )
volume_db = -3.0
[connection signal="body_entered" from="Area" to="." method="_on_Area_body_entered"]
